added pictures and css to home page

--- a/portfolio_app/static/css/index.css
+++ b/portfolio_app/static/css/index.css
@@ -1,5 +1,6 @@
 #top{
     text-align: center;
+    border-bottom: 2px solid black
 }
 
 #sites{
@@ -8,9 +9,26 @@
     padding-left: 5%;
 }
 
-#blog{
+#sites > img{
+    width: 75%;
+    border: black 1px solid;
+}
+
+
+
+#personal{
     display: inline-block;
-    width: 40%;
+    width: 45%;
     padding-left: 5%;
     text-align:right;
+    vertical-align: top;
+}
+
+#personal > p{
+    font-size: 20px;
+}
+
+#personal > img{
+    width: 50%;
+    border-radius: 10px;
 }
