--- a/portfolio_app/templates/index.html
+++ b/portfolio_app/templates/index.html
@@ -6,7 +6,7 @@
     <title>Michael Erickson's Portfolio</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
-    <link rel="shortcut icon" href="{% static 'img/favicon.png' %}">
+    <link rel="shortcut icon" href="{% static 'img/family.jpeg' %}">
 </head>
 <body>
     <div id="top">
@@ -22,15 +22,6 @@
         <h4>{{project.short_des}}</h4>
         <img src="{{project.picture.url}}" alt="{{project.name}}">
         {% endfor %}
-        <!-- <h3><a href="">Sweet Petite Designs</a></h3>
-        <p>An e-commerce website designed to drive sales of a local, family bakery</p>
-        <img src="{% static 'img/spd.png' %}" alt="Sweet Petite Designs Site">
-        <h3><a href="">Community Church Finder</a></h3>
-        <p>A social media application to help churches and local residents find each other</br> based on user experience and church preferences.</p>
-        <img src="{% static 'img/church_finder.png' %}" alt="Church Finder Site">
-        <h3><a href="">Metroidvania Game</a></h3>
-        <p>Python (PyGame) 2D side scrolling game</p>
-        <img src="{% static 'img/metroidvania.png' %}" alt="Metroidvania Game"> -->
     </div>
     <div id="personal">
         <h1>About Me</h1>
