--- a/sweet_petite_app/templates/graduation.html
+++ b/sweet_petite_app/templates/graduation.html
@@ -14,8 +14,7 @@
             <a href=""><img id="logo" src="{% static 'imgs/logo.png' %}" alt="SPD Logo"></a>
         </div>
         <div id="nav">
-    <a href=""><h2>Home</h2></a>
-    <a href="/menu"><h2>Menu</h2></a>
+            <a href="/sweet_petite/index"><h2>Home</h2></a>    <a href="/menu"><h2>Menu</h2></a>
     <a href="/reviews"><h2>Reviews</h2></a>
     <a href="/photos"><h2>Photo Gallery</h2></a>
     <a href="/contact"><h2>Contact</h2></a>
