--- a/portfolio_app/templates/index.html
+++ b/portfolio_app/templates/index.html
@@ -12,7 +12,7 @@
     <div id="top">
         <h1>Welcome to Michael Erickson's Portfolio</h1>
         <h4>Email Address: Merickson51293@gmail.com | Phone Number: 248-798-3461</h4>
-        <h3><a href="">Resume</a> - <a href="https://www.linkedin.com/in/michael-erickson512/" target="blank">LinkedIn</a> - <a href="https://github.com/merickson51293" target="blank">GitHub</a></h3>
+        <h3><a href="https://www.linkedin.com/in/michael-erickson512/" target="blank">LinkedIn</a> - <a href="https://github.com/merickson51293" target="blank">GitHub</a></h3>
         
     </div>
     
@@ -21,7 +21,7 @@
         {% for project in project %}
         <a href="/proj_page/{{project.id}}"><h2>{{project.name}}</h2></a>
         <h4>{{project.short_des}}</h4>
-        <img src="{{project.picture.url}}" alt="{{project.name}}">
+     
         {% endfor %}
     </div>
     <div id="personal">
