--- a/portfolio_app/templates/index.html
+++ b/portfolio_app/templates/index.html
@@ -15,7 +15,11 @@
         <h3><a href="https://www.linkedin.com/in/michael-erickson512/" target="blank">LinkedIn</a> - <a href="https://github.com/merickson51293" target="blank">GitHub</a></h3>
         
     </div>
-    
+    <div id="slideshow">
+        <img class="mySlides" src="{% static 'img/spd.png' %}">
+        <img class="mySlides" src="{% static 'img/church_finder.png' %}">
+        <img class="mySlides" src="{% static 'img/metroidvania.png' %}">
+    </div>
     <div id="sites">
         <h1 style="text-decoration: underline;">Projects</h1>
         {% for project in project %}
@@ -34,5 +38,21 @@
         <a href="/blog_post/{{blogs.id}}">{{blogs.title}}</a> - {{blogs.created_at}}
         {% endfor %}
     </div>
+    <script>
+        var slideIndex = 0;
+    carousel();
+    
+    function carousel() {
+      var i;
+      var x = document.getElementsByClassName("mySlides");
+      for (i = 0; i < x.length; i++) {
+        x[i].style.display = "none";
+      }
+      slideIndex++;
+      if (slideIndex > x.length) {slideIndex = 1}
+      x[slideIndex-1].style.display = "block";
+      setTimeout(carousel, 4000); 
+    }
+    </script>
 </body>
 </html>
