--- a/portfolio_app/static/css/index.css
+++ b/portfolio_app/static/css/index.css
@@ -1,3 +1,4 @@
+
 #top{
     text-align: center;
     border-bottom: 2px solid black
@@ -7,6 +8,10 @@
     display: inline-block;
     width: 40%;
     padding-left: 5%;
+    padding-right: 5%;
+    background-color: #9FB1BC;
+    text-align: center;
+    margin-left: 25%;
 }
 
 #sites > img{
@@ -22,11 +27,9 @@
 }
 
 #personal{
-    display: inline-block;
-    width: 45%;
-    padding-left: 5%;
-    text-align:right;
-    vertical-align: top;
+    background-color: #6E8898;
+    text-align: center;
+    padding: 1%;
 }
 
 #personal > p{
